tests/tst/errors/Error.php
<?php
/**
 * @package axy\errors
 */

namespace axy\errors\tests\tst\errors;

interface Error
{
}
